[workspace]
resolver = "2"
members = [
	"crates/replicate/client",
	"crates/replicate/common",
	"crates/replicate/server",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT-0 OR Apache-2.0"
repository = "https://github.com/NexusSocial/networked-physics-demo"
edition = "2021"
rust-version = "1.78.0"

[workspace.dependencies]
base64 = "0.21.7"
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3.30"
pin-project = "1"
rand = "0.8.5"
replicate-client.path = "crates/replicate/client"
replicate-server.path = "crates/replicate/server"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.56"
tokio = { version = "1.35.1", default-features = false }
tokio-serde = "0.9"
tokio-util = { version = "0.7.10", default-features = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = "1.7.0"
wtransport = "0.1.13"

[profile.dev]
# Enable a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
# Seems to cause crashes on mac on opt-level 3
opt-level = 2
